--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,11 @@ code {
     monospace;
 }
 
+@keyframes marquee {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
