--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,12 @@
   src: url('fonts/heming-variable.ttf') format('truetype');
 }
 
+@font-face {
+  font-family: 'Grotesk';
+  src: url('fonts/DTGetaiGroteskDisplay-Black.ttf') format('truetype');
+
+}
+
 .text-shadow {
   text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.2);
 }
